remove logs, fixed background color on smaller screens - ms

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
+  background-color: #282c34;
 }
 
 html,
